añadi logo pequeño y otros

--- a/rottenkidney/index.html
+++ b/rottenkidney/index.html
@@ -21,7 +21,7 @@
         <div class="header">
             <div class "contenedor">
                 <div class="logo">
-                    <img src="logomenu.png" alt="kidney" height="80px">
+                    <img src="images/logo.svg" alt="kidney" height="200px">
                 </div>
                 <div class=navlist>
                     <ul>
@@ -37,6 +37,9 @@
                         </li>
                         <li>
                             <a href="">Contacto</a>
+                        </li>
+                        <li>
+                            <a href="">otro</a>
                         </li>
                     </ul>
                 </div>
