--- a/rottenkidney/index.html
+++ b/rottenkidney/index.html
@@ -1,54 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RottenKidney</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilos.css">
-    <script src="js/main.js"></script>
+  <title>RottenKidney</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="estilos2.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-
 <body>
     <header>
-        
+        <img class="portada" src="images/fondo.svg" alt="top" width="100%" height="auto">
+    </header>
+
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #000000;">
         <div class="container">
-                <img class="portada" src="images/top.png" alt="top" width="100%" height="auto">               
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.svg" alt="logo" style="width:150px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 3</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="header">
-            <div class "contenedor">
-                <div class="logo">
-                    <img src="images/logo.svg" alt="kidney" height="200px">
+    </nav>
+
+    <section id="content">
+        <div class="container">
+            <br>
+            <h1>Calaveras</h1>
+            <br>
+            <div class="row">
+                <div class="coll">
+                    <div class="card" style="width:350px">
+                        <img class="card-img-top" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <div class="card-body">
+                            <h4 class="card-title">Calavera Iron Man</h4>
+                            <p class="card-text">$50.000 Col</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
                 </div>
-                <div class=navlist>
-                    <ul>
-                        <li>
-                            <a href="">Productos</a>
-                        </li>
-                        <li>
-                            <a href="">Clientes</a>
-                        </li>
-                        <li> </li>
-                        <li>
-                            <a href="">Quienes somos</a>
-                        </li>
-                        <li>
-                            <a href="">Contacto</a>
-                        </li>
-                        <li>
-                            <a href="">otro</a>
-                        </li>
-                    </ul>
+                <div class="coll">
+                    <div class="card" style="width:350px">
+                        <img class="card-img-top" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <div class="card-body">
+                            <h4 class="card-title">Calavera Iron Man</h4>
+                            <p class="card-text">$50.000 Col</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="coll">
+                    <div class="card" style="width:350px">
+                        <img class="card-img-top" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <div class="card-body">
+                            <h4 class="card-title">Calavera Iron Man</h4>
+                            <p class="card-text">$50.000 Col</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
 
 
-    </header>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 </body>
-
 </html>
