--- a/rottenkidney/index.html
+++ b/rottenkidney/index.html
@@ -45,37 +45,47 @@
             <h1>Calaveras</h1>
             <br>
             <div class="row">
-                <div class="coll">
-                    <div class="card" style="width:350px">
-                        <img class="card-img-top" src="images/calaveras/1ironman.jpg" alt="ironman">
+                <div class="col-xs-12 col-md-6 col-xl-4 pb-10px">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="images/calaveras/1ironman.jpg" alt="ironman">
                         <div class="card-body">
-                            <h4 class="card-title">Calavera Iron Man</h4>
+                            <h5 class="card-title">Calavera Wolverine</h5>
+                            <p class="card-text">$50.000 Col</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>   
+                <div class="col-xs-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <div class="card-body">
+                            <h5 class="card-title">Calavera Iron Man</h5>
+                            <p class="card-text">$50.000 Col</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>  
+                <div class="col-xs-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <div class="card-body">
+                            <h5 class="card-title">Calavera Iron Man</h5>
+                            <p class="card-text">$50.000 Col</p>
+                            <a href="#" class="btn btn-primary">Comprar</a>
+                        </div>
+                    </div>
+                </div>     
+                <div class="col-xs-12 col-md-6 col-xl-4">
+                    <div class="card">
+                        <img class="card-img-top img-fluid" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <div class="card-body">
+                            <h5 class="card-title">Calavera Iron Man</h5>
                             <p class="card-text">$50.000 Col</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
                 </div>
-                <div class="coll">
-                    <div class="card" style="width:350px">
-                        <img class="card-img-top" src="images/calaveras/1ironman.jpg" alt="ironman">
-                        <div class="card-body">
-                            <h4 class="card-title">Calavera Iron Man</h4>
-                            <p class="card-text">$50.000 Col</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="coll">
-                    <div class="card" style="width:350px">
-                        <img class="card-img-top" src="images/calaveras/1ironman.jpg" alt="ironman">
-                        <div class="card-body">
-                            <h4 class="card-title">Calavera Iron Man</h4>
-                            <p class="card-text">$50.000 Col</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div>            
         </div>
     </section>
 
