--- a/pagina/index.html
+++ b/pagina/index.html
@@ -48,10 +48,10 @@
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-4 pb-10px">
                     <div class="card">
-                        <img class="card-img-top img-fluid" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <img class="card-img-top img-fluid" src="images/calaveras/1deadpool.jpg" alt="Deadpool">
                         <div class="card-body row" style="padding: 10px;">
-                            <h5 class="card-title col-8" style="margin: 0;">Calavera Wolverine</h5>
-                            <a href="#" class="btn btn-primary float-right col-3.5" style="background-color: #117FB7; padding: .2rem .75rem">Comprar</a>
+                            <h5 class="card-title col-8" style="margin: 0;">Calavera Deadpool</h5>
+                            <a href="Deadpool.html" class="btn btn-primary float-right col-3.5" style="background-color: #117FB7; padding: .2rem .75rem">Comprar</a>
                             <h6 class="card-text col-8" style="margin: 0;">$50.000 Col</h6>
                         </div>
                     </div>
@@ -68,10 +68,10 @@
                 </div>   
                 <div class="col-xs-12 col-md-6 col-xl-4 pb-10px">
                     <div class="card">
-                        <img class="card-img-top img-fluid" src="images/calaveras/1ironman.jpg" alt="ironman">
+                        <img class="card-img-top img-fluid" src="images/calaveras/nightking.jpg" alt="Nightking">
                         <div class="card-body row" style="padding: 10px;">
                             <h5 class="card-title col-8" style="margin: 0;">Calavera Night King</h5>
-                            <a href="#" class="btn btn-primary float-right col-3.5" style="background-color: #117FB7; padding: .2rem .75rem">Comprar</a>
+                            <a href="Nightking.html" class="btn btn-primary float-right col-3.5" style="background-color: #117FB7; padding: .2rem .75rem">Comprar</a>
                             <h6 class="card-text col-8" style="margin: 0;">$50.000 Col</h6>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                             <div class="col-md-4 col-lg-4 offset-lg-1 ">
                                 <h3>Contacto</h3>  
                                 <br>                              
-                                <p><i class="fas fa-phone"></i> Whatsapp: (031) 321 4104513</p>
+                                <p><i class="fas fa-phone"></i> Whatsapp: (+057) 321 4104513</p>
                                 <p><i class="fas fa-envelope"></i> Email: <a href="mailto:rottenkidney.art@gmail.com">rottenkidney.art@gmail.com</a></p>                         
                             </div>
                             <div class="col-md-4 col-lg-3 footer-social wow fadeInUp">
